bugfix: correct listings on https://github.com/autoplot/